--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1 id="game-title">Maze Game</h1>
+    <div id="score-container">
+        <span id="level">Level: 1</span>
+        <span id="score">Score: 0</span>
+        <span id="timer">Time: 0s</span>
+    </div>
     <div id="maze-container">
         <div id="maze"></div>
     </div>
